# ai_nyt

./: .gitignore  README.md
client/: package-lock.json  package.json  tailwind.config.js  vercel.json
client/public/: index.html
client/src/: App.tsx  config.ts  config2.ts  heroicons.d.ts  index.css  index.tsx  webpack.config.ts
client/src/components/: AnthropicChat.tsx  Cast.tsx  CastList.tsx  ChangeLog.tsx  ImageDetails.tsx  InformationModal.tsx  LatexSourceModal.tsx  NavBar.tsx  ProfilePage.tsx  SignIn.tsx  TerminalComponent.tsx  UserNameProofs.tsx  UserProfile.tsx
client/src/types/: Casts.d.ts  Channel.d.ts
express-server/: index.ts  package-lock.json  package.json
express-server/routes/: generate.ts  hubble.ts  warpcast.ts
notes/latex/: notes.tex
server/: Cargo.toml  build.rs
server/abi/: KeyGateway.json
server/migrations/2024-04-28-234832_create_articles/: up.sql
server/migrations/2024-05-05-025343_update_user_id_type/: down.sql  up.sql
server/migrations/2024-05-05-025504_add_is_default_to_articles/: down.sql  up.sql
server/migrations/2024-05-19-014002_add_unique_constraint_to_articles/: down.sql  up.sql
server/proto/: username_proof.proto
server/src/: anthropic.rs  db.rs  hubble.rs  key_gateway.rs  main.rs  message.rs  mod.rs  models.rs  openai.rs  schema.rs  submit_cast.rs  username_proof.rs
server/src/api/: anthropic.rs
server/src/database/: db.rs  utils.txt
server/src/database/models/: article.rs
server/src/farcaster/: hubble.rs  mod.rs  submit_cast.rs
server/src/models/: cast.rs  mod.rs  reaction.rs  user.rs
(+33 files in other folders)
