[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
anyhow = "1.0"
dotenv = "0.15.0"

[dev-dependencies]
actix-rt = "2.6.0"
